--- a/calculator/templates/calculator/secondchecker.html
+++ b/calculator/templates/calculator/secondchecker.html
@@ -23,10 +23,11 @@
 			<p>OFish is a tool designed for Oligodendroglioma FISH analysis.</p>
 		</div>
 		<br>
-	<form action=' ' method='POST'>{% csrf_token %}
+	<form action='/calculator/secondchecker' method='POST'>{% csrf_token %}
 		
 		<div class="patient">
 			Patient Name: <input type="text" name="Patient" value="{{ PN }}"> Hospital Number: <input type="tel" name="Hospital" value="{{ H }}"> NHS number: <input type="tel" name="NHS" value="{{ NHS }}">
+			Date of Birth: <input type="date" name="Date">
 			Input by: <input type="text" name="Checker" value="{{ Checker }}">
 		</div>
 		<br>
@@ -50,6 +51,7 @@
 		<br>
 		</div>
 		<div>
+			<p> Analyst Input</p>
 		
 			<table style="width:50%" id="myTable">
 				<tr>
@@ -171,168 +173,156 @@
 			<br>
 			<br>
 			<div>
-			Second Checker: <input type="checkbox" name="Second Checker" id= "Checker" value="{{ Second }}" 
-			onclick="myFunction()">
+				<p> Second Checker Input </p>
+			</div>
+		
+		</div>
+			<table style="width:50%" id="myTable">
+				<tr>
+					<th>Red Signal</th>
+					<th>Green Signal</th>
+					<th>No. of cells</th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" max="10" name="Red Signals11" value="{{ RS11 }}">
+					</th>
+					<th> 
+						<input type="number" max="10" name="Green Signals11" value="{{ GS11 }}">
+				    </th>
+				    <th>
+				    	<input type="number" max="50" name="No. of cells11" value="{{ CS11 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min= 0 max="10" name="Red Signals12" value="{{ RS12 }}" value="0">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals12" value="{{ GS12 }}" value="0">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells12" value="{{ CS12 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min="0" max="10" name="Red Signals13" value="{{ RS13 }}">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals13" value="{{ GS13 }}">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells13" value="{{ CS13 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min="0" max="10" name="Red Signals14" value="{{ GS14}}">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals14" value="{{ RS14 }}">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells14" value="{{ CS14 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min="0" max="10" name="Red Signals15" value="{{ RS15 }}">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals15" value="{{ GS15 }}">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells15" value="{{ CS15 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min="0" max="10" name="Red Signals16" value="{{ RS16 }}">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals16" value="{{ GS16 }}">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells16" value="{{ CS16 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min="0" max="10" name="Red Signals17" value="{{ RS17 }}">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals17" value="{{ GS17 }}">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells17" value="{{ CS17 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min="0" max="10" name="Red Signals18" value="{{ RS18 }}">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals18" value="{{ GS18 }}">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells18" value="{{ CS18 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min="0" max="10" name="Red Signals19" value="{{ RS19 }}">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals19" value="{{ GS19 }}">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells19" value="{{ CS19 }}">
+				    </th>
+				</tr>
+				<tr>
+					<th> 
+						<input type="number" min="0" max="10" name="Red Signals20" value="{{ RS20 }}">
+					</th>
+					<th> 
+						<input type="number" min="0" max="10" name="Green Signals20" value="{{ GS20 }}">
+				    </th>
+				    <th>
+				    	<input type="number" min="0" max="50" name="No. of cells20" value="{{ CS20 }}">
+				    </th>
+				</tr>
+			</table>
 			</div>
 			<br>
 			<input type='submit' value='Submit'>
 			<br> 
 			<br>
 			<div>
-			<input type="text" name="error" value="{{ validation }}">
-			</div>
-			<h2>Result</h2>
-			<input type="text" name="Result" value="{{ X }}">
+			<input type="text" name="error" value="{{ validation }}" style="font-size:18px">
 			<br>
-		
-		</div>
-			<table style="width:50%" id="myTable">
-				<tr>
-					<th>Red Signal</th>
-					<th>Green Signal</th>
-					<th>No. of cells</th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" max="10" name="Red Signals1" value="{{ RS1 }}">
-					</th>
-					<th> 
-						<input type="number" max="10" name="Green Signals1" value="{{ GS1 }}">
-				    </th>
-				    <th>
-				    	<input type="number" max="50" name="No. of cells1" value="{{ CS1 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min= 0 max="10" name="Red Signals2" value="{{ RS2 }}" value="0">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals2" value="{{ GS2 }}" value="0">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells2" value="{{ CS2 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min="0" max="10" name="Red Signals3" value="{{ RS3 }}">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals3" value="{{ GS3 }}">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells3" value="{{ CS3 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min="0" max="10" name="Red Signals4" value="{{ GS4}}">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals4" value="{{ RS4 }}">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells4" value="{{ CS4 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min="0" max="10" name="Red Signals5" value="{{ RS5 }}">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals5" value="{{ GS5 }}">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells5" value="{{ CS5 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min="0" max="10" name="Red Signals6" value="{{ RS6 }}">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals6" value="{{ GS6 }}">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells6" value="{{ CS6 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min="0" max="10" name="Red Signals7" value="{{ RS7 }}">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals7" value="{{ GS7 }}">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells7" value="{{ CS7 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min="0" max="10" name="Red Signals8" value="{{ RS8 }}">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals8" value="{{ GS8 }}">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells8" value="{{ CS8 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min="0" max="10" name="Red Signals9" value="{{ RS9 }}">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals9" value="{{ GS9 }}">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells9" value="{{ CS9 }}">
-				    </th>
-				</tr>
-				<tr>
-					<th> 
-						<input type="number" min="0" max="10" name="Red Signals10" value="{{ RS10 }}">
-					</th>
-					<th> 
-						<input type="number" min="0" max="10" name="Green Signals10" value="{{ GS10 }}">
-				    </th>
-				    <th>
-				    	<input type="number" min="0" max="50" name="No. of cells10" value="{{ CS10 }}">
-				    </th>
-				</tr>
-			</table>
-	</form>
-
-		</div>
-		<br>
-		<input type='submit' value='Submit'>
-		<br> 
-		<br>
-		<div>
-		<input type="text" name="error" value="{{ validation }}">
-		</div>
-		<h2>Result</h2>
-		<input type="text" name="Result" value="{{ X }}">
-		<br>
-		
-		</div>
+			<br>
+			<p>
+			<b>Analyst Result</b>
+			<br>
+			<input type="text" name="Analyst" value="{{ X }}" style="border:none">
+			</p>
+			<br>
+			<p>
+			<b>Second Checker Result</b> 
+			<br>
+			<input type="text" name="Second" value="{{ Y }}" style="border:none">
+			</p>
+			<br>
+			<p>	
+			<b>Combined Interpretation</b>
+			<br>
+			<input type="text" name="Interpretation" value="{{ Interpretation }}" style="border:none">
+			</p>	
+			<br>
+			</div>
+		</form>
 
 	</body>	
-	<script>
-	function myFunction() {
-		// Get the checkbox
-		var checkBox = document.getElementsById('Checker');
-		// Get Form
-		var form = document.getElementsById("myTable");
-
-		// If the checkbox is checked, display the table 
-		if (checkBox.checked == true){
-			
-			
-		} 
-
-	}
-	</script>
 </html>
